nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress1
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  #ingressClassName: "nginx"
  rules:
    - host:  arch.homework
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service
                port:
                  number: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /health
spec:
  #ingressClassName: "nginx"
  rules:
    - host:  arch.homework
      http:
        paths:
          - path: /otusapp/.*/.*
            pathType: Prefix
            backend:
              service:
                name: service
                port:
                  number: 8080
